--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "mongoose": "^5.12.14",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
