--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "jssha": "^3.2.0",
     "mongoose": "^5.12.14",
     "next": "latest",
     "react": "^17.0.2",
