--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "jssha": "^3.2.0",
+    "crypto-js": "^4.0.0",
     "mongoose": "^5.12.14",
     "next": "latest",
+    "next-auth": "^3.27.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
