--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "latest",
     "next-auth": "^3.27.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.1.0",
