--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
     "crypto-js": "^4.0.0",
     "mongoose": "^5.12.14",
     "next": "latest",
