--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "crypto-js": "^4.0.0",
+    "mapbox-gl": "^2.3.1",
     "mongoose": "^5.12.14",
     "next": "latest",
     "next-auth": "^3.27.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-map-gl": "^6.1.16",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
