--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "crypto-js": "^4.0.0",
