--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@testing-library/user-event": "^13.1.9",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "crypto-js": "^4.0.0",
